# CodeGodRust

./: README.md
bot/: Cargo.toml
bot/src/: config.toml  lib.rs  main.rs
bot/src/assets/: logo_art.txt  logo_art_metal.txt  logo_art_rainbow.txt
bot/src/commands/: misc.rs
bot/src/compilers/: mod.rs
bot/src/compilers/rextester/: args.txt  client.rs  langs.txt
bot/src/compilers/tio/: aliases.txt  client.rs  langs.txt
bot/src/compilers/wandbox/: aliases.txt  client.rs  langs.txt
bot/src/database/: mod.rs  trigger_emoji.rs
bot/src/events/: code_executor.rs  event_handler.rs  mod.rs
bot/src/utils/: config.rs  database.rs  misc.rs  mod.rs  parser.rs
