[package]
name = "bot"
version = "0.1.0"
authors = ["loyston500 <loyston500@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.20"
lazy_static = "1.4.0"
reqwest = "0.11.1"
serde = "1.0.123"
mongodb = "2.0.0-alpha.1"
serenity = { version = "0.10.4", features = ["collector"] }
shlex = "1.0.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
toml = "0.5.8"
